CMF 2.1.0-beta (unreleased)

  New Features

    - testing: Added test layers for setting up ZCML.

    - CMFDefault formlib: Added zope.formlib support.
      This includes some CMF specific base classes and an 'EmailLine' field.

    - browser views: Added some zope.formlib based forms.

    - CMFDefault utils: Added 'checkEmailAddress' function.

    - Added CMFCore.FSRestMethod:  ReST equivalent of FSSTXMethod.

    - CMFCore.FSSTXMethod:  Modernized, added tests, made customization
      possible (now renders via ZPT by default, using 'main_template').

    - Portal: Added 'email_charset' property.

    - CMFDefault utils: Added 'makeEmail' function.

    - CMFDefault.Image and CMFDefault.File: Overridden index_html methods
      add Cache Policy Manager-awareness and thus bring these implementations
      in line with CMFCore.FSFile and CMFCore.FSImage
      (http://www.zope.org/Collectors/CMF/454)

  Bug Fixes

    - CMFCore.CachingPolicyManager: Prevent firing of caching policies
      for templates (DTML or ZPT) that are rendered in-line (without a 
      separate request) while rendering the requested content item's view.
      (http://www.zope.org/Collectors/CMF/456)

    - CMFDefault RegistrationTool: Fixed too restrictive email checking.
      The new 'checkEmailAddress' function is now used.

    - Fixed test breakage induced by use of Z3 pagetemplates in Zope 2.10+.

    - CMFDefault skins: Fixed encoding issues in welcome and reminder emails.
      'password_email' and 'registered_email' now encode their return value
      correctly, using 'email_charset' and the new 'makeEmail' function.

  Others

    - The CMF now depends on Zope 2.10.1


CMF 2.1.0-alpha (2006/10/09)

  New Features

    - CMFDefault utils: Added getBrowserCharset function.
      Returns the charset preferred by the browser. Strings encoded with this
      charset are decoded correctly by Five.browser.decode.processInputs.
