@@ -2,6 +2,12 @@
     xmlns="http://namespaces.zope.org/zope">
 
   <subscriber
+      for=".interfaces.ICachingPolicyManager
+           zope.component.interfaces.IObjectEvent"
+      handler=".CachingPolicyManager.handleCachingPolicyManagerEvent"
+      />
+
+  <subscriber
       for=".interfaces.ICookieCrumbler
            zope.component.interfaces.IObjectEvent"
       handler=".CookieCrumbler.handleCookieCrumblerEvent"
